# oklathon-2024

./: .clang-format  README.md
TrafficGram/: CMakeLists.txt  CameraListManager.cpp  CameraListManager.h  CameraListManagerTest.cpp  CameraSymbol.h  TrafficGram.cpp  TrafficGram.h  main.cpp  recordingsession.cpp  recordingsession.h
TrafficGram/qml/: TrafficGramForm.qml  main.qml  qml.qrc
TrafficGram/test/: CMakeLists.txt  CameraListManagerTest.cc  TrafficGramTest.cc
TrafficGram/test/data/: CameraPoles.json
docs/: testing.md
